@@ -14,16 +14,16 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-SHA1 f9e6b3455b9fdc96c4b906c8feee99e9747bb823 Build.PL
-SHA1 559883fd361ce635b4d28b11c978362338be55e6 Changelog
+SHA1 5c35276665c3e1ced528fbff928414278aa0f59e Build.PL
+SHA1 a3d8c8ad69be5c87a8d5d7e7336fe70092a8dfb1 Changelog
 SHA1 9c107f61f2aa01bf74310b180bbd5ec249266bc1 MANIFEST
-SHA1 2b6e03775ca642da39c766f9cc6350db4d6c7f42 META.json
-SHA1 1de97757c854e2d806f542ea1be7099151d1337b META.yml
-SHA1 2e1294a78d89c05dd9034e3a617abec7a0edfc29 README
-SHA1 52d7388897e6d1032a23715e9fdea83da269d8a9 bin/db-iris
-SHA1 fb79bf33b9c95284efd3ab6ef7b29302d8cb7077 lib/Travel/Status/DE/IRIS.pm
-SHA1 0db7e666249839d5b07632ab8545e382bd765010 lib/Travel/Status/DE/IRIS/Result.pm
-SHA1 e79b1b91b4d231dd43f51c02b5f6469b7587e893 lib/Travel/Status/DE/IRIS/Stations.pm
+SHA1 715ebe1d76234d8b027b646f3e03cb33397d3f6e META.json
+SHA1 0b616ac38b43b1bc399aeda1862d62ecadf3221a META.yml
+SHA1 5fec0133166fbaa02c2b0d2cd6adaef6afe95cd3 README
+SHA1 64eb597f21e5e11683923c3cc9efea000f16fb57 bin/db-iris
+SHA1 2e74dceb05526cb0a32f8b0c19bfbe575217f618 lib/Travel/Status/DE/IRIS.pm
+SHA1 da48d4bfa24e0ef1b305c423fb29d0027f31b218 lib/Travel/Status/DE/IRIS/Result.pm
+SHA1 01c2dba8b666d2f2b09add89f80c683fbc8a0402 lib/Travel/Status/DE/IRIS/Stations.pm
 SHA1 b5551b04e8bb5d033e6baea76cd5444d9fe7b1e7 scripts/acronyms.pl
 SHA1 536f10c8cf46a751727751db6aae68d9da21120d scripts/acronyms.sh
 SHA1 65c7499f6edef8101392c6e12dfd53333b54ace6 scripts/debug
@@ -33,7 +33,7 @@ SHA1 fd251ffc56ca6e52020c906b61158f78b035679d t/02-compile-pod.t
 SHA1 bb2c2942c1b2f0a53b2f760fb02cc2b1ece5aa16 t/20-iris-class.t
 SHA1 40cff21fd6ce42b8f48d0669518b8a983192d83d t/21-iris-stations.t
 SHA1 f6b4c1105c915e44a7c11dfb63893aa1ee3b339b t/30-iris-const.t
-SHA1 3c6725cd30c2dedbd4327d465527f04c91871076 t/31-result-basics.t
+SHA1 0f6c1c83435da629c797af92b95a10dedc0fb82d t/31-result-basics.t
 SHA1 a12c1c622437892812c7f1007d190896ab40cacb t/32-result-messages.t
 SHA1 1db22f443196dfeac3f19b379c7f2d8259bcb7ff t/33-result-route.t
 SHA1 2f48e34609a7afde4893ad1b78cbdd7aae0dc534 t/34-result-transfer.t
@@ -55,17 +55,17 @@ SHA1 e2a5e36447b697146055ed814c024185a98cfa6b t/in/station/EE
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQIcBAEBCgAGBQJUP7cxAAoJEBANW/tRZuAF7rIP/2bFcnfoWZiGD0CS3OuOsbqq
-XgcpvrR/An6JxHcPx5BQl+RU08uCP0bIgerDbJPmAhJTUqNYePEb7l6TDLLWXcS4
-dETeSeZ4dUs5BytuN8Yjz1oHvd6QYmLZpfP2+I8nzoRVc6dmZQ830mV9o8fYTVIm
-yCHEEMVLOAeyIYQMe1Zr8Dn1XywTKBAp0HPArLBoWFxMfY0Zixxd8rT+S4Nfa5Hu
-miIcDWk36LZykm37RZuF3sgNv5HgN5ldTQx3dr6/YvMc3h/Apfu+DTpR+atHzJE8
-nRSpgTaFgiJslpP27pCPKKmu55vetIkqReSZqJQWUkTxDFA1tfi3LXZfcQll3WAK
-5GW8XHC5KY1ue1tET5i6uBZNEWm1MAJh3nOusuY1kHnwynlbbB7ah/qhwdd9uZKD
-Aw5Hc2b3akBVPISrQhKZxOZFt33NGEKEBeADdZ/O/vHqBVgrPKx1uvu15UWcaZC1
-zTRgndCb4K/vbWwucMMm3RgNYiVUQKpvfducz8XtmYKza+meSRECTZ8FfD5HM6Dm
-SQLZUV6J7ReL12g/liX5btdfXclNS9ZRNSgdVZI4o3y1UyYcMUPOKQFD1yoV23yo
-7dschOykgOLlF36iVijtRRrYR36/O2xrqqS1RzrA3ti7rqKBEOnxp22FqByN2ME4
-WpOriB88+vyWzRkO+UZZ
-=+qW3
+iQIcBAEBCgAGBQJUV5WUAAoJEBANW/tRZuAFhNQQALoxxBCz8WUIYmy7135fgaB2
+a7eIoIF3ubNETwtyKGIDc98+ZWD1yy54NhHXGJ5pfMQ+6+xRX10sLCw5q+3NoRWi
+aZcQ6stHxtDmS71+Z8eVIyml/RtCx8vrASHi/zY13lkg2PyMs0D3WgxZG02zeaU/
+HWchQzp/byqQDbUAdPGKZs1g7v4IzfbeGGFYVPHYL1+EDir7jugb0vtA+FdzQpkA
+1Eueg3zCvBPsXppvx0HGD4ccS3wOeMrSKwKPTKTac6Yy+QRDUHciyTqm8p8kP7C3
+R0qAR3gHR1h6w1v38LTyjyYEbBdy/2boBj3/W+lZD0hvYS805dllnDJTxX2uvKY1
+29IZjW35RL1TvoJYQ2FAJwUYUCY02/u52ItMvB7Mc8+cBOeD1GWMxDJKPTXGj84E
+D4QaC9tZ5L8yw7auCxYYI+Pk+Joi6wpVKLxE1M6/F/jqns1GO9rOwmsH2DeKCQb0
+z1YtDEzLn9klzUzxSA4TxeJDHYYCUclNZnks4CXc0UMsIUBUcgbJWgpoWu5RWabh
+d1QJmDGoVuOxWl1NY4zwXsbGHdfSVPJt9JslVRJykSjzJEUAPbNV17SZDO/ERdf4
+Aov2Oh4KRGMlh6PtOw+Gw/ybEXG22ZOjLtQGa6pb8qmW77DxroK9p5AhBYUNHPQT
+0FT9up7ZllesgYH+C8hf
+=T6eE
 -----END PGP SIGNATURE-----
