@@ -6,7 +6,7 @@ use utf8;
 
 no if $] >= 5.018, warnings => 'experimental::smartmatch';
 
-our $VERSION = '0.05';
+our $VERSION = '0.06';
 
 use DateTime;
 use DateTime::Format::Strptime;
@@ -82,14 +82,16 @@ if ($time) {
 
 for my $efield (@edata_pre) {
 	given ($efield) {
-		when ('d') { $edata{delay}     = 1 }
-		when ('D') { $edata{delays}    = 1 }
-		when ('f') { $edata{fullroute} = 1 }
-		when ('m') { $edata{messages}  = 1 }
-		when ('q') { $edata{qos}       = 1 }
-		when ('r') { $edata{route}     = 1 }
-		when ('t') { $edata{times}     = 1 }
-		default    { $edata{$efield}   = 1 }
+		when ('a') { $edata{additional} = 1 }
+		when ('c') { $edata{canceled}   = 1 }
+		when ('d') { $edata{delay}      = 1 }
+		when ('D') { $edata{delays}     = 1 }
+		when ('f') { $edata{fullroute}  = 1 }
+		when ('m') { $edata{messages}   = 1 }
+		when ('q') { $edata{qos}        = 1 }
+		when ('r') { $edata{route}      = 1 }
+		when ('t') { $edata{times}      = 1 }
+		default    { $edata{$efield}    = 1 }
 	}
 }
 
@@ -247,6 +249,15 @@ sub display_result {
 			print "\n";
 		}
 
+		if ( $edata{additional} and $d->additional_stops ) {
+			printf( "Zusätzlicher Halt in: %s\n",
+				join( q{, }, $d->additional_stops ) );
+		}
+
+		if ( $edata{canceled} and $d->canceled_stops ) {
+			printf( "Ohne Halt in: %s\n", join( q{, }, $d->canceled_stops ) );
+		}
+
 		if ( $edata{fullroute} ) {
 			print "\n" . join( "\n", $d->route ) . "\n\n";
 		}
@@ -261,6 +272,7 @@ if ( my $err = $status->errstr ) {
 }
 if ( my $warning = $status->warnstr ) {
 	say STDERR "Request warning: ${warning}";
+	say STDERR '                 Information may be incomplete';
 }
 
 if ( $status_via and $status_via->errstr ) {
@@ -271,6 +283,7 @@ if ( $status_via and $status_via->errstr ) {
 if ( $status_via and $status_via->warnstr ) {
 	my $warning = $status_via->warnstr;
 	say STDERR "Request warning in --via : ${warning}";
+	say STDERR '                           Information may be incomplete';
 }
 
 sanitize_options();
@@ -363,7 +376,7 @@ I<station>
 
 =head1 VERSION
 
-version 0.05
+version 0.06
 
 =head1 DESCRIPTION
 
@@ -422,6 +435,16 @@ so both C<< -ot,d >> and C<< --output=times,delay >> is valid.
 Valid output types are:
 
 =over
+
+=item a / additional
+
+If a train's route deviates from its schedule: Print a list of additional
+(unscheduled) stops it will stop at.
+
+=item c / canceled
+
+If a train's route deviates from its schedule: Print a list of canceled
+stops (scheduled stops which will not be served).
 
 =item d / delay
 
