@@ -1,3 +1,12 @@
+Travel::Status::DE::IRIS 0.06 - Mon Nov 03 2014
+
+    * New non-core module dependency: List::Compare
+    * Add support for canceled and additional stops
+    * db-iris: Add options -oa and -oc
+    * Result: Add accessors additional_stops and canceled_stops
+    * Improve support for delayed trains
+    * Support additional IRIS delay messages
+
 Travel::Status::DE::IRIS 0.05 - Thu Oct 16 2014
 
     * Support additional IRIS delay messages
